blocks/header.css
.header::before {
  content: "";
  width: 100%;
  height: 1px;
  opacity: 0.7;
  background: #545454;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  bottom: 0;
}

.header {
  margin-top: 45px;
}

@media screen and (max-width: 320px) {
  .header::before {
    width: 320px;
  }

  .header {
    margin-top: 28px;
  }

  .header__logo {
    height: 24px;
    width: 126px;
  }
}

